@@ -8,7 +8,7 @@ from unittest.mock import Mock, patch
 sys.path.append(os.path.dirname(__file__) + "/../tunman")
 
 from ..tunman.model import HostTunnelDefinitions, Forwarding, LocalPortDefinition, RemotePortDefinition
-from ..tunman.manager import TunnelManager, Validation
+from ..tunman.manager.ssh import TunnelManager, Validation
 from ..tunman.logger import setup_dummy_logger
 
 
@@ -39,7 +39,9 @@ class ManagerTest(unittest.TestCase):
         validate.wait_time_before_restart = 1
         validate.kill_existing_tunnel_on_failure = False
 
-        fw = Forwarding(configuration=config, local=local_port, remote=remote_port, validate=validate, mode='local')
+        fw = Forwarding(configuration=config, local=local_port, remote=remote_port,
+                        validate=validate, mode='local', retries=5, use_autossh=False, health_check_connect_timeout=0,
+                        warm_up_time=0, time_before_restart_at_initialization=0, wait_time_after_all_retries_failed=0)
 
         return fw, config
 
@@ -58,7 +60,7 @@ class ManagerTest(unittest.TestCase):
 
             manager = TunnelManager()
             manager.spawn_ssh_process = Mock()
-            manager._tunnel_loop(fw, config, '-L 127.0.0.1:3306:192.168.1.5:3306')
+            manager._tunnel_loop(Mock(), fw, config, '-L 127.0.0.1:3306:192.168.1.5:3306')
 
             assert manager.spawn_ssh_process.call_count == 1
 
@@ -79,7 +81,7 @@ class ManagerTest(unittest.TestCase):
 
                 manager = TunnelManager()
                 manager.spawn_ssh_process = Mock()
-                manager._tunnel_loop(fw, config, '-L 127.0.0.1:3306:192.168.1.5:3306')
+                manager._tunnel_loop(Mock(), fw, config, '-L 127.0.0.1:3306:192.168.1.5:3306')
 
                 assert manager.spawn_ssh_process.call_count == 1
 
@@ -105,6 +107,6 @@ class ManagerTest(unittest.TestCase):
                     check_tunnel_alive_mock.side_effect = [False, True]
 
                     manager.spawn_ssh_process = Mock()
-                    manager._tunnel_loop(fw, config, '-L 127.0.0.1:3306:192.168.1.5:3306')
+                    manager._tunnel_loop(Mock(), fw, config, '-L 127.0.0.1:3306:192.168.1.5:3306')
 
                     assert manager.spawn_ssh_process.call_count == 0
